Remove overflow-x property to fix navbar issue

--- a/src/scss/apps/matcha/_matcha.scss
+++ b/src/scss/apps/matcha/_matcha.scss
@@ -13,10 +13,6 @@ $matcha-dark-green: #28534a;
             format('opentype');
 }
 
-#matcha-main {
-    overflow-x: hidden;
-}
-
 .matcha-btn {
     padding: 0.3em 1em;
     font-size: 2rem;
